kubernetes/arc-ui/LIVE.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"sage-enterprise-ui"},"name":"sage-enterprise-ui","namespace":"arc-ui"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"sage-enterprise-ui"}},"template":{"metadata":{"labels":{"app":"sage-enterprise-ui"}},"spec":{"containers":[{"image":"ghcr.io/silentsage432/sage-enterprise-ui:bridge-v10","imagePullPolicy":"Always","livenessProbe":{"failureThreshold":5,"httpGet":{"path":"/health","port":80},"ini [...]
  creationTimestamp: "2025-11-18T06:46:52Z"
  generation: 3
  labels:
    app: sage-enterprise-ui
  name: sage-enterprise-ui
  namespace: arc-ui
  resourceVersion: "13467305"
  uid: f4483e70-7f80-4eb5-bcad-096c19faab47
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sage-enterprise-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-11-17T23:53:23-07:00"
      labels:
        app: sage-enterprise-ui
    spec:
      containers:
      - image: ghcr.io/silentsage432/sage-enterprise-ui:bridge-v10
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: ui
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2025-11-18T06:46:52Z"
    lastUpdateTime: "2025-11-18T06:46:52Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2025-11-18T06:46:52Z"
    lastUpdateTime: "2025-11-18T06:53:24Z"
    message: ReplicaSet "sage-enterprise-ui-f8f688b6d" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 3
  replicas: 2
  unavailableReplicas: 2
  updatedReplicas: 1
